@@ -1,4 +1,8 @@
 2006-09-19  Jean-Louis Martineau <martineau@zmanda.com>
+	* contrib/sst: Removed
+	* Makefile.am (EXTRA_DIST): Remove sst files.
+
+2006-09-19  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/find.c (search_logfile): Count 'PARTIAL taper line'.
 
 2006-09-19  Jean-Louis Martineau <martineau@zmanda.com>
